--- a/ICLReader.html
+++ b/ICLReader.html
@@ -16,6 +16,7 @@
       var wireless = true;
  
       var time = 0;
+      var timeDirect = 0;
       var fps = 60;
       var timeMax = 10 * fps;
       var timeBox;
@@ -292,7 +293,7 @@
         //Primary and layered SVGs
         fieldSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                      .style("float", "left").style("border", "1px solid black")
-                     .on("mousemove", ChoosExit).on("click", exitChosen);
+                     .on("mousemove", ChoosExit).on("click", ExitChosen);
         graphSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                      .style("float", "left").style("border", "1px solid black");
         var classes = ["backGround", "lines", "bots", "overLay"];
@@ -316,6 +317,15 @@
                          .attr("cy", unit2Px * 4 * (20 / 25) - unit2Px * (10 / 25)).attr("r", unit2Px / 16)
                          .style("fill", tourColors[i]));
           graphLines.push([]);
+        }
+        while (time <= timeMax) {
+          LoadAnim();
+        }
+        for (var i = 0; i < touristNum; i++) {
+          tourLine[i] = fieldSVG.select(".lines").append("path").attr("d", lineFx(tourLines[i]))
+                        .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
+          graphLine[i] = graphSVG.select(".lines").append("path").attr("d", lineFx(graphLines[i]))
+                         .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
         }
       }
 
@@ -432,57 +442,32 @@
       }
 
 //Turns off exit choosing events, and starts loading
-      function exitChosen() {
+      function ExitChosen() {
         d3.select(".exitText").remove();
         fieldSVG.on("mousemove", null).on("click", null);
-        projector = setInterval(LoadAnim, 1000 / fps);
+        time = 0;
+        UpdateInfo(0);
+        projector = setInterval(PlayAnim, 1000 / fps);
       }
 
 //Control times, and update bots
       function LoadAnim() {
-        if (time > timeMax) {
-          UpdateInfo(0);
-          clearInterval(projector);
-          projector = setInterval(PlayAnim, 1000 / fps);
-        } else {
-          for (var i = 0; i < tourists.length; i++) {
-            var who = tourists[i];
-            who.allowance = who.velocity * unit2Px / fps;
-            while (who.allowance > 0) {
-              fxs[instruBinder[i][who.on][0]](who, instruBinder[i][who.on][1]);
-              who.visual.attr("cx", who.x).attr("cy", who.y);
-            }
-            LoadLines(i);
+        for (var i = 0; i < tourists.length; i++) {
+          var who = tourists[i];
+          who.allowance = who.velocity * unit2Px / fps;
+          while (who.allowance > 0) {
+            fxs[instruBinder[i][who.on][0]](who, instruBinder[i][who.on][1]);
           }
-          time++;
-          timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
-          timeBox.attr("width", (time / timeMax) * 4 * unit2Px);
+          LoadLines(i);
         }
-        timeText.text("Time: " + Math.floor((10000 * time) / fps) / 10000);
-        frameText.text("Frame: " + time);
+        time++;
       }
 
 //Create lines, and update graph dot positions, as well recreating image of path.
       function LoadLines(i) {
         var dista = unit2Px * 4 - (Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2)) * (20 / 25));
-        graphDots[i].attr("cx", (unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px)).attr("cy", (dista - unit2Px * (10 / 25)));
-        if (time > 0) {
-          tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
-          tourLine[i].remove();
-          tourLine[i] = fieldSVG.select(".lines").append("path").attr("d", lineFx(tourLines[i]))
-                        .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-          graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
-          graphLine[i].remove();
-          graphLine[i] = graphSVG.select(".lines").append("path").attr("d", lineFx(graphLines[i]))
-                         .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
-        } else {
-          tourLines[i].push({x:center[0], y:center[1]});
-          tourLine.push(fieldSVG.select(".lines").append("path").attr("d", lineFx(tourLines[i]))
-                        .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none"));
-          graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
-          graphLine.push(graphSVG.select(".lines").append("path").attr("d", lineFx(graphLines[i]))
-                         .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none"));
-        }
+        tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
+        graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
       }
 
       function PlayAnim() {
