--- a/ICLReader.html
+++ b/ICLReader.html
@@ -9,6 +9,7 @@
     <script>
       //////////----------Instantiate Variables----------//////////
       var fxs = [GoOutAtAngle, Wait, FollowWall, WaitFor, FollowWallFor, GoToCenter, WaitAverage, GoToPoint];
+      var efxs = [GoToExit];
       var shapes = ["Circle", "Line", "Triangle", "Square", "Pentagon", "Hexagon",
                     "Heptagon", "Octagon", "Nonagon", "Decagon", "Undecagon", "Dodecagon"];
 
@@ -36,9 +37,9 @@
 
       var touristNum = 0;
       var instruBinder = [
-                          [[0, [45]], [3, [1]], [5, [null]], [0, [225]], [4, ["left", 90]], [2, ["right"]]],
-                          [[0, [-45]], [3, [1]], [5, [null]], [0, [135]], [4, ["right", 90]], [1, [null]]],
-                          [[6, [null]]]
+                          [[0, [null]], [0, [45]], [3, [1]], [5, [null]], [0, [225]], [4, ["left", 90]], [2, ["right"]]],
+                          [[0, [null]], [0, [-45]], [3, [1]], [5, [null]], [0, [135]], [4, ["right", 90]], [1, [null]]],
+                          [[0, [null]], [6, [null]]]
                          ];
       var tourColors = [];
 
@@ -92,7 +93,7 @@
           this.target = null;
           this.velocity = 1;
           this.allowance = 0;
-          this.on = 0;
+          this.on = 1;
           this.a = 0;
           this.x = center[0];
           this.y = center[1];
@@ -238,7 +239,7 @@
         var sumPosition = [0, 0];
         var totalNum = 0;
         for (i = 0; i < tourists.length; i++) {
-          if (tourists[i].on != 6) {
+          if (instruBinder[i][tourists[i].on][0] != 6) {
             totalNum++;
             sumPosition[0] += tourists[i].x;
             sumPosition[1] += tourists[i].y;
@@ -267,24 +268,46 @@
 
 
 
+      function GoToExit(who, value) {
+        console.log("waagh");
+        if ((who.x == fieldExit[0]) && (who.y == fieldExit[1])) {
+          Wait(who, null);
+        } else {
+          DirectTo(who, fieldExit);
+        }
+      }
+
+      function ChaseAfter(who, value) {
+
+      }
+
+      function Intercept(who, value) {
+
+      }
+
+
+
+
+
+
       function Start() {
         //self contained, goal is to get user to choose room shape
-        var holdG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
+        var holdSVG = d3.select("body").append("svg").attr("width", unit2Px * 4).attr("height", unit2Px * 4)
                     .style("float", "left").style("border", "1px solid black");
-        holdG.append("text").attr("x", 2 * unit2Px).attr("y", unit2Px)
+        holdSVG.append("text").attr("x", 2 * unit2Px).attr("y", unit2Px)
              .style("text-anchor", "middle").style("font-size", unit2Px * (5 / 25)).text("What room shape?");
-        var holdT = holdG.append("text").attr("class", "numbah").attr("x", 2 * unit2Px).attr("y", unit2Px * (40 / 25))
+        var holdT = holdSVG.append("text").attr("class", "numbah").attr("x", 2 * unit2Px).attr("y", unit2Px * (40 / 25))
                     .style("text-anchor", "middle").style("font-size", unit2Px * (10 / 25)).text(shapes[degrees - 1]);
-        holdG.append("path").attr("d", 'M' + unit2Px * (80 / 25) + ',' + unit2Px * (36 / 25) + 'L' + unit2Px * (75 / 25) + ',' + unit2Px * (31 / 25)
+        holdSVG.append("path").attr("d", 'M' + unit2Px * (80 / 25) + ',' + unit2Px * (36 / 25) + 'L' + unit2Px * (75 / 25) + ',' + unit2Px * (31 / 25)
                                      + 'L' + unit2Px * (75 / 25) + ',' + unit2Px * (41 / 25) + 'L' + unit2Px * (80 / 25) + ',' + unit2Px * (36 / 25))
              .on("click", () => {degrees++;if (degrees > 12) {degrees = 12;}holdT.text(shapes[degrees - 1]);});
-        holdG.append("path").attr("d", 'M' + unit2Px * (20 / 25) + ',' + unit2Px * (36 / 25) + 'L' + unit2Px * (25 / 25) + ',' + unit2Px * (31 / 25)
+        holdSVG.append("path").attr("d", 'M' + unit2Px * (20 / 25) + ',' + unit2Px * (36 / 25) + 'L' + unit2Px * (25 / 25) + ',' + unit2Px * (31 / 25)
                                      + 'L' + unit2Px * (25 / 25) + ',' + unit2Px * (41 / 25) + 'L' + unit2Px * (20 / 25) + ',' + unit2Px * (36 / 25))
              .on("click", () => {degrees--;if (degrees < 1) {degrees = 1;}holdT.text(shapes[degrees - 1]);});
-        holdG.append("text").attr("x", 2 * unit2Px).attr("y", unit2Px * (60 / 25))
+        holdSVG.append("text").attr("x", 2 * unit2Px).attr("y", unit2Px * (60 / 25))
              .style("text-anchor", "middle").style("font-size", unit2Px * (5 / 25)).text("Press this when done")
              .on("click", () => {
-               holdG.remove();
+               holdSVG.remove();
                Load();
              });
       }
@@ -376,12 +399,12 @@
                     .call(d3.drag().on("start", SSlide).on("drag", MSlide).on("end", ESlide));
         graphSVG.select(".backGround").append("rect").attr("x", unit2Px * (19 / 25)).attr("y", unit2Px * (4 / 25)).attr("width", unit2Px / 4)
                 .attr("class", "reveal").attr("height", unit2Px / 4).style("fill", "#00ff00")
-                .on("click", () => {timeDirect = 1;});
+                .on("click", () => {timeDirect++;});
         graphSVG.select(".backGround").append("rect").attr("x", unit2Px * (10 / 25)).attr("y", unit2Px * (4 / 25)).attr("width", unit2Px / 4).attr("height", unit2Px / 4)
                 .attr("class", "reveal").style("fill", "#0000ff").on("click", () => {timeDirect = 0;});
         graphSVG.select(".backGround").append("rect").attr("x", unit2Px * (1 / 25)).attr("y", unit2Px * (4 / 25)).attr("width", unit2Px / 4).attr("height", unit2Px / 4)
                 .attr("class", "reveal").style("fill", "#ff0000")
-                .on("click", () => {timeDirect = -1;});
+                .on("click", () => {timeDirect--;});
         //Tourist Info Visual
         graphSVG.select(".backGround").append("path").attr("d", 'M' + unit2Px * (1 / 25) + ',' + unit2Px * (16 / 25) + 'L' + unit2Px * (6 / 25) + ',' + unit2Px * (11 / 25)
                                                 + 'L' + unit2Px * (6 / 25) + ',' + unit2Px * (21 / 25) + 'L' + unit2Px * (1 / 25) + ',' + unit2Px * (16 / 25))
@@ -422,6 +445,26 @@
         return('#' + RGB[0] + RGB[1] + RGB[2]);
       }
 
+//Control times, and update bots
+      function LoadAnim() {
+        for (var i = 0; i < tourists.length; i++) {
+          LoadLines(i);
+          var who = tourists[i];
+          who.allowance = who.velocity * unit2Px / fps;
+          while (who.allowance > 0) {
+            fxs[instruBinder[i][who.on][0]](who, instruBinder[i][who.on][1]);
+          }
+        }
+        time++;
+      }
+
+//Create lines, and update graph dot positions, as well recreating image of path.
+      function LoadLines(i) {
+        var dista = unit2Px * 4 - (Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2)) * (20 / 25));
+        tourLines[i].push({x:tourists[i].x, y:tourists[i].y, a:tourists[i].a});
+        graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
+      }
+
 //Controls exit positioning for user's choice
       function ChoosExit() {
         exitAngle = Math.atan2(d3.event.x - center[0], d3.event.y - center[1]) - (Math.PI / 2);
@@ -446,28 +489,60 @@
         d3.select(".exitText").remove();
         fieldSVG.on("mousemove", null).on("click", null);
         time = 0;
-        UpdateInfo(0);
-        projector = setInterval(PlayAnim, 1000 / fps);
+        projector = setInterval(AlterAnim, 1000 / fps);
       }
 
-//Control times, and update bots
-      function LoadAnim() {
-        for (var i = 0; i < tourists.length; i++) {
-          var who = tourists[i];
-          who.allowance = who.velocity * unit2Px / fps;
-          while (who.allowance > 0) {
-            fxs[instruBinder[i][who.on][0]](who, instruBinder[i][who.on][1]);
+      function AlterAnim() {
+        if (time > timeMax) {
+          UpdateInfo(0);
+          clearInterval(projector);
+          projector = setInterval(PlayAnim, 1000 / fps);
+        } else {
+          for (var i = 0; i < tourists.length; i++) {
+            var who = tourists[i];
+            var holdAllo = CheckForExit(i);
+            if (who.knows) {
+              who.allowance = holdAllo;
+              while (who.allowance > 0) {
+                efxs[instruBinder[i][0][0]](who, instruBinder[i][0][1]);
+              }
+            } else {
+              who.x = tourLines[i][time].x;
+              who.y = tourLines[i][time].y;
+            }
+            who.visual.attr("cx", who.x).attr("cy", who.y);
+            AlterLines(i);
           }
-          LoadLines(i);
+          time++;
+          timeSlide.attr("x", (time / timeMax) * (31 / 8) * unit2Px);
         }
-        time++;
+        timeText.text("Time: " + Math.floor((10000 * time) / fps) / 10000);
+        frameText.text("Frame: " + time);
       }
 
-//Create lines, and update graph dot positions, as well recreating image of path.
-      function LoadLines(i) {
+      function CheckForExit(i) {//look at one behind, where coming form to see where at(maybe along exit?)
+        var who = tourists[i];
+        var dLoc = [fieldExit[0] - tourLines[i][time].x, fieldExit[1] - tourLines[i][time].y];
+        var dist = Math.sqrt(Math.pow(dLoc[1], 2) + Math.pow(dLoc[0], 2));
+        if (dist < who.velocity * unit2Px / (2 * fps)) {
+          if (who.a == exitAngle) {
+            who.knows = true;
+          }
+        }
+        return(who.velocity * unit2Px / fps);
+      }
+
+      function AlterLines(i) {
         var dista = unit2Px * 4 - (Math.sqrt(Math.pow(fieldExit[0] - tourists[i].x, 2) + Math.pow(fieldExit[1] - tourists[i].y, 2)) * (20 / 25));
-        tourLines[i].push({x:tourists[i].x, y:tourists[i].y});
-        graphLines[i].push({x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))});
+        graphDots[i].attr("cx", (unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px)).attr("cy", (dista - unit2Px * (10 / 25)));
+        tourLines[i][time] = {x:tourists[i].x, y:tourists[i].y};
+        tourLine[i].remove();
+        tourLine[i] = fieldSVG.select(".lines").append("path").attr("d", lineFx(tourLines[i]))
+                      .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
+        graphLines[i][time] = {x:(unit2Px * (10 / 25) + (time / timeMax) * (80 / 25) * unit2Px), y:(dista - unit2Px * (10 / 25))};
+        graphLine[i].remove();
+        graphLine[i] = graphSVG.select(".lines").append("path").attr("d", lineFx(graphLines[i]))
+                       .style("stroke", tourColors[i]).style("stroke-width", unit2Px * (1 / 25)).style("stroke-opacity", 0.5).style("fill", "none");
       }
 
       function PlayAnim() {
