--- a/disk/f2f/f2fshowcase.html
+++ b/disk/f2f/f2fshowcase.html
@@ -20,16 +20,25 @@
 
     </p>-->
 
+    <!--<script>
+
+        function showAlgorithmDesc(s){
+            d3.selectAll('.desc').style('display', 'none');
+            d3.select('#'+s).style('display', 'inline-block');
+        }
+
+    </script>-->
+
     <div class='tab'>
         <button class='tablinks' type='submit' action='javascript:void(0)' onClick='showAlgorithmDesc("A")'/>Algorithm A</button>
-        <button class='tablinks' type='submit' action='javascript:void(0)' onClick='showAlgorithmDesc("B")'/>Algorithm B</button>
-        <button class='tablinks' type='submit' action='javascript:void(0)' onClick='showAlgorithmDesc("C")'/>Algorithm C</button>
+        <button class='tablinks' type='submit' action='javascript:void(0)' onClick='showAlgorithmDesc("B")'/>Algorithm B(X, Φ)</button>
+        <button class='tablinks' type='submit' action='javascript:void(0)' onClick='showAlgorithmDesc("C")'/>Algorithm C(X, Φ, λ)</button>
     </div>
     <div class='tabtxt'>
-
+        Thes algorithms focus on evacuating two robots using the <span class='tooltip'>Face to Face communication model.<span class='tooltiptext'>The robots can only communicate by physically being next to each other.</span></span>
+        <br />
         <div id="A" class='desc'>
-            This algorithm is about two robots using the <span class='tooltip'>Face to Face communication model.<span class='tooltiptext'>The robots can only communicate by physically being next to each other.</span></span>
-            <ol><b><em>Steps:</em></b>
+            <ol><b><em><u>Steps:</u></em></b>
                 <li>
                     The robots go to the perimeter at the same angle.
                 </li>
@@ -46,7 +55,8 @@
         </div>
 
         <div id="B" class='desc'>
-            This algorithm is about two robots using the <span class='tooltip'>Face to Face communication model.<span class='tooltiptext'>The robots can only communicate by physically being next to each other.</span></span> This algorithm takes two arguments, (X, Φ), X being the arc length travelled before taking <span class='tooltip'>a detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ, and travel toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter.</span></span>, and Φ being the angle to take the detour at.
+            <br />
+            This algorithm takes two arguments, B(X, Φ); X being the arc length travelled before taking <span class='tooltip'>a detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ, and travel toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter.</span></span>, and Φ being the angle to take the detour at.
             <ol><b><em>Steps:</em></b>
                 <li>
                     The robots go to the perimeter at the same angle.
@@ -70,6 +80,27 @@
         </div>
 
         <div id="C" class='desc'>
+            <br />
+            Thise algorithm takes two arguments, C(X, Φ, λ); X being the arc length travelled before taking <span class='tooltip'>a triangular detour<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ for time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to the point it came from.</span></span>, Φ being the angle to take the detour at, and λ being the time for at which the robot starts to travel directly to the central axis from its detour.
+            <ol><b><em>Steps:</em></b>
+                <li>
+                    The robots go to the perimeter at the same angle.
+                </li>
+                <li>
+                    They travel opposite directions once they reach the perimeter. e.g, If Robot 1 goes clockwise, Robot 2 goes counter-clockwise.
+                </li>
+                <li>
+                    The robots move along the perimeter until one of them finds the exit, in which case they will <span class='tooltip'>intercept the other's path. <span class='tooltiptext'>The robot which finds the exit will calculate a path (chord) across the circle s.t. the distance of its chord is equal to the arc that the other would have travelled along the perimeter in the time it takes to cross the chord. </span></span>
+                </li>
+                <li>
+                    If the robots have travelled the distance X without being notified of the exit, they initiate the <span class='tooltip'>triangular detour phase<span class='tooltiptext'>The robot will go away from the perimeter at an angle Φ for time λ, and then travel DIRECTLY toward and stop at the vertical axis of origin. If it has not been intercepted or notified about the exit at the point, it will return to the perimeter using the shortest path back to the point it came from.</span></span> at angle Φ, for time λ.
+                </li>
+                <li>
+                    If, after the triangular detour phase the exit has not been found, the robots continue moving around the perimeter and follow the normal interception methods.
+                </li>
+            </ol>
+
+            This method takes advantage of the triangular detour phase to provide a slightly faster evacuation time in the event that the exit is found quickly. The robot which finds the exit will travel less distance to intercept the other if it is currently in its detour phase, thus lowering the overall time. The only time which this does not apply is for a smaller set of exit positions, which are observed after the detour phase.
 
         </div>
     </div>
