--- a/interface.html
+++ b/interface.html
@@ -32,6 +32,8 @@
               padding: 10px;
               font-size: 16px;
               transition: 0.3s;
+              box-shadow: 2px 3px 2px #888;
+              border-radius: 3px;
         }
         input[type=text] {
               background-color: #f1f1f1;
